# adbfv2

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  UPDATE.md  __main__.py  app.py  build.py  pyproject.toml  requirements.txt  updates.txt
.github/workflows/: ci.yml
adb_tools/: __init__.py  adb.py  fastboot.py  process_runner.py
docs/: adb_reference.md  fastboot_reference.md
features/: apk_manager.py  dev_console.py  device_list.py  file_transfer.py  logcat_viewer.py  wireless.py
tests/: __init__.py  test_adb_wrapper.py  test_fastboot_wrapper.py
ui/: dialogs.py  main_window.py  wizard.py
utils/: config.py  logger.py  platform_paths.py  secure_store.py
